preventing scrolling behind the modal

--- a/app/styles/modal.css
+++ b/app/styles/modal.css
@@ -17,6 +17,10 @@
   padding-top: 10px;
 }
 
+body {
+  overflow: hidden;
+}
+
 .overlay {
   position: fixed;
   top: 0;
